textalignment corrected

--- a/src/app/pages/admin/admin.component.scss
+++ b/src/app/pages/admin/admin.component.scss
@@ -338,6 +338,7 @@
             margin-top: 0.4rem;
             margin-bottom: 1rem;
             font-size: 0.9rem;
+            text-align: justify;
           }
 
           .project-technologies {
