--- a/src/app/pages/blog/blog.component.scss
+++ b/src/app/pages/blog/blog.component.scss
@@ -109,6 +109,7 @@
         -webkit-line-clamp: 3;
         -webkit-box-orient: vertical;
         overflow: hidden;
+        text-align: justify;
       }
 
       .tags {
