--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -237,6 +237,12 @@
           font-size: 3rem;
           color: rgba(255, 255, 255, 0.5);
         }
+        img {
+          max-width: 100%;
+          height: auto;
+          object-fit: cover;
+          object-position: center;
+        }
       }
 
       .work-content {
