--- a/src/app/pages/our-works/our-works.component.scss
+++ b/src/app/pages/our-works/our-works.component.scss
@@ -123,6 +123,7 @@
             line-height: 1.6;
             margin-bottom: 1rem;
             font-size: 0.9rem;
+            text-align: justify;
           }
 
           .work-technologies {
